--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "This is were I learn how to use React in one night and use it to build some demos over the course of the weekend. Wish me luck!",
   "main": "index.js",
   "scripts": {
-    "start": "httpster -d ./dist -p 3000"
+    "start": "./node_modules/.bin/webpack-dev-server"
   },
   "author": "Odafe Aror",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "json-loader": "^0.5.7",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "react": "^16.3.2",
